--- a/src/routers/root/content/Content.scss
+++ b/src/routers/root/content/Content.scss
@@ -4,8 +4,8 @@
   min-height: 92vh;
 }
 
-.list-item {
-  background-color: v.$c-indigo;
+.list-item,
+.grid-item {
   margin: v.$p-ml;
   padding: v.$p-ml;
   border-radius: v.$p-s;
@@ -17,5 +17,48 @@
 
   span {
     font-size: v.$fs-s;
+  }
+}
+
+.list-item {
+  background-color: v.$c-indigo;
+}
+
+.grid-item {
+  position: relative;
+  width: calc(100% - v.$p-ml * 4);
+
+  h3 {
+    margin: v.$p-xl 0 0 0;
+  }
+
+  .grid-item-image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    border-radius: v.$p-s;
+
+    img {
+      display: block;
+      width: 100%;
+    }
+  }
+
+  .grid-item-image::after {
+    position: absolute;
+    content: "";
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background: linear-gradient(180deg,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0) 0.01%,
+        rgba(0, 0, 0, 0.25) 49.48%,
+        rgba(0, 0, 0, 0.6) 100%);
   }
 }
