--- a/src/Global.scss
+++ b/src/Global.scss
@@ -33,17 +33,23 @@ header {
 .popup-container {
   position: fixed;
   z-index: 1;
-  background-color: v.$c-dark-purple;
+  background-color: v.$c-blue;
   top: 0;
   left: 0;
   width: calc(100% - v.$p-ml * 1.5);
   height: 100%;
-  padding: v.$p-ml;
 
-  .popup-container-title {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+  div {
+    background-color: v.$c-dark-purple;
+    height: 100%;
+    width: 100%;
+    padding: v.$p-ml;
+
+    .popup-container-title {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+    }
   }
 }
