Tests for ListItem & GridItem

--- a/src/routers/root/content/Content.scss
+++ b/src/routers/root/content/Content.scss
@@ -15,8 +15,10 @@
     font-weight: 600;
   }
 
-  span {
+  h4 {
     font-size: v.$fs-s;
+    font-weight: 400;
+    margin: v.$p-s 0 0 0;
   }
 }
 
