--- a/src/components/popup/Menu.scss
+++ b/src/components/popup/Menu.scss
@@ -1,12 +1,16 @@
 @use "../../variables" as v;
 
+p {
+  margin: 0 0 v.$p-m;
+}
+
 .menu-row {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   gap: v.$p-m;
-  margin: v.$p-s 0;
+  margin: v.$p-m 0;
 
   svg[data-active="false"] {
     color: v.$c-gray;
@@ -14,5 +18,25 @@
 
   svg[data-active="true"] {
     color: v.$c-blue;
+  }
+}
+
+.menu-row:first-child {
+  margin: 0 0 v.$p-m;
+}
+
+.menu-countries {
+  display: flex;
+  flex-direction: column;
+  height: 70vh;
+  overflow-y: scroll;
+  gap: v.$p-m;
+
+  .menu-contry {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    gap: v.$p-m;
   }
 }
