Displaying news content in a popup

--- a/src/routes/root/content/Content.scss
+++ b/src/routes/root/content/Content.scss
@@ -10,6 +10,7 @@
   padding: v.$p-ml;
   border-radius: v.$p-s;
   box-shadow: 0 10px 30px -15px rgba(2, 12, 27, 0.7);
+  user-select: none;
 
   h3 {
     font-size: v.$fs-r;
