--- a/src/Global.scss
+++ b/src/Global.scss
@@ -29,3 +29,11 @@ header {
   justify-content: space-between;
   align-items: center;
 }
+
+.country-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  gap: v.$p-m;
+}
