--- a/src/components/popup/Popup.scss
+++ b/src/components/popup/Popup.scss
@@ -11,7 +11,7 @@
 
   div {
     background-color: v.$c-dark-purple;
-    height: 100%;
+    height: 100% !important;
     width: 100%;
     padding: v.$p-ml;
 
