--- a/src/components/popup/Popup.scss
+++ b/src/components/popup/Popup.scss
@@ -20,6 +20,11 @@
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
+
+      button {
+        background-color: transparent;
+        border: none;
+      }
     }
   }
 }
